--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,10 @@
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
 
-# OS Cache files
+# Cache files and temporary files
 .DS_Store
+*.log
+
+# LaTeX intermediate files
+*.aux
+*.synctex.gz
