Added missing parts from Vuforia that were accidentally excluded.
Also modified .gitignore to allow *.dll files on the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@
 [Oo]bj/
 [Bb]uild/
 
-OVR/
-Plugins/
-
 # Blender backup files
 *.blend?
 
@@ -51,6 +48,5 @@ thumbs.db
 *.fdb_latexmk
 *.fls
 
-# Generated Executables and Libaries
+# Generated Executables
 *.exe
-*.dll
