--- a/New Unity Project/sonar-project.properties
+++ b/New Unity Project/sonar-project.properties
@@ -4,6 +4,8 @@ sonar.projectName=Mirrors
 sonar.projectVersion=1.0
 
 sonar.sourceEncoding=UTF-8
+sonar.language=cs
+sonar.sources=Assets/Scripts
 
 # Enable the MSVC Bootstrapper that reads the *.sln file
 # Currently disabled in favour of manual configuration.
@@ -15,8 +17,3 @@ sonar.stylecop.projectFilePath=Assembly-CSharp-vs.csproj
 
 # FxCop configuration
 sonar.cs.fxcop.assembly=Temp/bin/Debug/Assembly-CSharp.dll
-
-# Compatibility for different SonarQube versions.
-# Not used, as the information is taken from the *.sln file
-sonar.language=cs
-sonar.sources=Assets
