--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ StyleCop.Cache
 *.userprefs
 *.pidb
 *.booproj
+Upgradelog*.htm
 
 # Unity3D generated meta files
 *.pidb.meta
@@ -54,3 +55,4 @@ thumbs.db
 # Generated Executables
 *.exe
 *.apk
+*.app/
