Added QMake project file to MirrorServer.
Now it's possible to use QMake / Qt Creator to manage the project.
This also allows minimal configuration (only requires setting the
path to OpenCV in an environment variable OPENCV_HOME).

Note that the project does not depend on Qt libraries. It just uses
QMake for the build process.

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@
 [Bb]uild/
 *_Data/
 *-build/
+build-*/
 
 # CMakeLists user-specific files
 CMakeLists.txt.user
+*.pro.user
 
 # Blender backup files
 *.blend?
