--- a/ARGame/sonar-project.properties
+++ b/ARGame/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.sources=Assets/Scripts
 # Enable the MSVC Bootstrapper that reads the *.sln file
 # Currently disabled in favour of manual configuration.
 sonar.visualstudio.enable=false
-sonar.visualstudio.solution=New Unity Project-csharp.sln
+sonar.visualstudio.solution=ARGame-csharp.sln
 
 # StyleCop configuration
 sonar.stylecop.projectFilePath=Assembly-CSharp-vs.csproj
