Move tests to separate directory

--- a/MirrorServer/vs/MirrorServerTest.vcxproj
+++ b/MirrorServer/vs/MirrorServerTest.vcxproj
@@ -54,7 +54,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\Alexander\Documents\Visual Studio 2015\Libraries\opencv-master\build\install\include;C:\Users\Alexander\Documents\Visual Studio 2015\Libraries\gtest-1.7.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\;C:\Users\Alexander\Documents\Visual Studio 2015\Libraries\opencv-master\build\install\include;C:\Users\Alexander\Documents\Visual Studio 2015\Libraries\gtest-1.7.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -72,7 +72,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\Alexander\Documents\Visual Studio 2015\Libraries\opencv-master\build\install\include;C:\Users\Alexander\Documents\Visual Studio 2015\Libraries\gtest-1.7.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\;C:\Users\Alexander\Documents\Visual Studio 2015\Libraries\opencv-master\build\install\include;C:\Users\Alexander\Documents\Visual Studio 2015\Libraries\gtest-1.7.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -84,8 +84,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\averagertest.cpp" />
     <ClCompile Include="..\cvutils.cpp" />
+    <ClCompile Include="..\tests\averagertest.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
