Add tests for utility functions

--- a/MirrorServer/vs/MirrorServerTest.vcxproj
+++ b/MirrorServer/vs/MirrorServerTest.vcxproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <ClCompile Include="..\cvutils.cpp" />
     <ClCompile Include="..\tests\averagertest.cpp" />
+    <ClCompile Include="..\tests\utilstest.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
