--- a/MirrorServer/vs/MirrorServerTest.vcxproj.filters
+++ b/MirrorServer/vs/MirrorServerTest.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="..\tests\averagertest.cpp">
       <Filter>Source Files\Tests</Filter>
     </ClCompile>
+    <ClCompile Include="..\tests\utilstest.cpp">
+      <Filter>Source Files\Tests</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
